<resources>
    <string name="app_name">精准扶贫</string>
    <string name="app_about">精准扶贫安卓客户端 v1.0</string>
    <string name="dialog_loading">请稍后&#8230;</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="back_pressed">再按一次退出程序</string>
    <string name="username_empyt">用户名不能为空</string>
    <string name="password_empyt">密码不能为空</string>
    <string name="request_error">请求失败，显示缓存</string>
    <string name="update_cache">缓存更新成功</string>
    <string name="login_overdue">登录信息失效，请重新登录</string>
    <string name="pkh_selected">当前帮扶对象：</string>
    <string name="cache_text">text</string>
    <string name="upload_content">保存</string>
    <string name="cancel">取消</string>
    <string name="insure">确定</string>
    <string name="save_info">是否保存并上传数据?</string>
    <string name="no_sdcard">请确认存储设备状态后重试</string>
    <string name="upload_success">上传成功</string>
    <string name="save_success">保存成功</string>
    <string name="upload_failed">上传失败，请确认网络连接后重试</string>
    <string name="delete">删除了</string>
    <string name="caches">缓存</string>
    <string name="no_caches">再使劲儿点也没缓存啦</string>
    <string name="update_titile">应用更新提示</string>
    <string name="update_ensure">更新</string>
    <string name="update_cancel">暂不更新</string>
    <string name="req_code_login">zyfp01001</string>
    <string name="req_code_getPkhJbxxList">zyfp01002</string>
    <string name="req_code_getPkhJbxx">zyfp01003</string>
    <string name="req_code_getPkhJtcyList">zyfp01004</string>
    <string name="req_code_getPkhJtcyJbxx">zyfp01005</string>
    <string name="req_code_getPkhSzqkList">zyfp01006</string>
    <string name="req_code_getPkhSzqkJbxx">zyfp01007</string>
    <string name="req_code_updatePkhSzqkJbxx">zyfp01008</string>
    <string name="req_code_addPkhSzqkJbxx">zyfp01009</string>
    <string name="req_code_getPkhZfqkJbxx">zyfp01010</string>
    <string name="req_code_updatePkhZfqkJbxx">zyfp01011</string>
    <string name="req_code_addPkhZfqkJbxx">zyfp01012</string>
    <string name="req_code_getPkhSctjJbxx">zyfp01013</string>
    <string name="req_code_updatePkhSctjJbxx">zyfp01014</string>
    <string name="req_code_addPkhSctjJbxx">zyfp01015</string>
    <string name="req_code_getPkhShqkJbxx">zyfp01016</string>
    <string name="req_code_updatePkhShqkJbxx">zyfp01017</string>
    <string name="req_code_addPkhShqkJbxx">zyfp01018</string>
    <string name="req_code_getPkhCyhzzJbxx">zyfp01019</string>
    <string name="req_code_updatePkhCyhzzJbxx">zyfp01020</string>
    <string name="req_code_addPkhCyhzzJbxx">zyfp01021</string>
    <string name="req_code_getPkhJtqkzpList">zyfp01022</string>
    <string name="req_code_updatePkhJbxx">zyfp01023</string>
    <string name="req_code_updatePkhJtcy">zyfp01024</string>
    <string name="req_code_addPkhJtcy">zyfp01025</string>
    <string name="req_code_addPkhJtqkzp">zyfp01026</string>
    <string name="req_code_getJdList">zyfp02001</string>
    <string name="req_code_getTzList">zyfp03001</string>
    <string name="req_code_getTzjbxx">zyfp03002</string>
    <string name="req_code_getTzJtcyList">zyfp03003</string>
    <string name="req_code_getTzSrmx">zyfp03004</string>
    <string name="req_code_getTzZcmx">zyfp03005</string>
    <string name="req_code_getTzBfjh">zyfp03006</string>
    <string name="req_code_addTz">zyfp03007</string>
    <string name="req_code_updateTzjbxx">zyfp03008</string>
    <string name="req_code_addTzjtcy">zyfp03009</string>
    <string name="req_code_updateTzjtcy">zyfp03010</string>
    <string name="req_code_updateTzsrmx">zyfp03011</string>
    <string name="req_code_updateTzzcmx">zyfp03012</string>
    <string name="req_code_updateTzzfxx">zyfp03013</string>
    <string name="req_code_getTzxmxx">zyfp03014</string>
    <string name="req_code_addTzsrmx">zyfp03015</string>
    <string name="req_code_addTzzcmx">zyfp03016</string>
    <string name="req_code_addTzzfqk">zyfp03017</string>
    <string name="req_code_getZxList">zyfp04001</string>
    <string name="req_code_getMsgCount">zyfp05001</string>
    <string name="req_code_getMsgList">zyfp05002</string>
    <string name="tab_news">资讯</string>
    <string name="tab_pkh">帮扶对象</string>
    <string name="tab_tz">台账</string>
    <string name="tab_build">建档</string>
    <string name="tab_jd">待建档贫困户</string>
    <string name="tab_mine">我的</string>
    <string name="login_username">账号</string>
    <string name="login_password">密码</string>
    <string name="login_ensure">登录</string>
    <string name="pkh_jbxx">基本信息</string>
    <string name="pkh_bfdx">帮扶对象</string>
    <string name="pkh_jtcy">家庭成员</string>
    <string name="pkh_szqk">收支情况</string>
    <string name="pkh_zfqk">住房情况</string>
    <string name="pkh_shtj">生活条件</string>
    <string name="pkh_sctj">生产条件</string>
    <string name="pkh_cyh">产业化情况</string>
    <string name="pkh_jtqkzp">家庭情况照片</string>
    <string name="pkh_error_id">没有查询到该贫困户相关信息</string>
    <string name="pkh_detail">详情</string>
    <string name="pkh_jbxx_hzxx">户主姓名</string>
    <string name="pkh_jbxx_lxdh">联系电话</string>
    <string name="pkh_jbxx_pkzt">贫困户状态</string>
    <string name="pkh_jbxx_sbbz">识别标准</string>
    <string name="pkh_jbxx_tpnf">脱贫年份</string>
    <string name="pkh_jbxx_khyh">开户银行</string>
    <string name="pkh_jbxx_yhzh">银行账号</string>
    <string name="pkh_jbxx_sfzh">身份证号</string>
    <string name="pkh_jbxx_jhsyh">计划生育户</string>
    <string name="pkh_jbxx_pkhsx">贫困户属性</string>
    <string name="pkh_jbxx_jzdz">居住地址</string>
    <string name="pkh_jbxx_sbbz_gjbz">国家标准</string>
    <string name="pkh_jbxx_sbbz_sdbz">省定标准</string>
    <string name="pkh_jbxx_no_change">基本信息不允许在客户端编辑</string>
    <string name="pkh_jtcy_none">成员信息有误，请求失败</string>
    <string name="pkh_jtcy_xm">姓名</string>
    <string name="pkh_jtcy_zp">照片</string>
    <string name="pkh_jtcy_xb">性别</string>
    <string name="pkh_jtcy_sfzhm">身份证号</string>
    <string name="pkh_jtcy_yhzgx">与户主关系</string>
    <string name="pkh_jtcy_mz">民族</string>
    <string name="pkh_jtcy_whcd">文化程度</string>
    <string name="pkh_jtcy_zxsqk">在校生情况</string>
    <string name="pkh_jtcy_jkqk">健康情况</string>
    <string name="pkh_jtcy_ldnlzk">劳动能力状况</string>
    <string name="pkh_jtcy_wgzk">务工状况</string>
    <string name="pkh_jtcy_wgsj">务工时间</string>
    <string name="pkh_jtcy_dbrk">是否低保人口</string>
    <string name="pkh_jtcy_cjxnhyl">参加新农合医疗</string>
    <string name="pkh_jtcy_cjcxjmjbylbx">参加城乡居民基本养老保险</string>
    <string name="pkh_jtcy_sfldlzyjy">是否劳动力转移就业</string>
    <string name="pkh_jtcy_sfxyjr">是否现役军人</string>
    <string name="pkh_jtcy_zzmm">政治面貌</string>
    <string name="pkh_jtcy_sfczzgylbx">是否参加城镇职工基本养老保险</string>
    <string name="pkh_jtcy_zdxx">在读学校</string>
    <string name="pkh_jtcy_cyzt">成员状态</string>
    <string name="pkh_jtcy_ztbhsj">状态变化时间</string>
    <string name="pkh_szqk_none">收支信息有误，请求失败</string>
    <string name="pkh_szqk_tjnd">年度</string>
    <string name="pkh_szqk_jtzsr">家庭总收入(元)</string>
    <string name="pkh_szqk_wgsr">务工收入(元)</string>
    <string name="pkh_szqk_scjyxsr">生产经营性收入(元)</string>
    <string name="pkh_szqk_zyxsr">转移性收入(元)</string>
    <string name="pkh_szqk_ccxsr">财产性收入(元)</string>
    <string name="pkh_szqk_dk">贷款(元)</string>
    <string name="pkh_szqk_scjyzcfy">生产经营支出费用(元)</string>
    <string name="pkh_szqk_jtcsr">家庭纯收入(元)</string>
    <string name="pkh_szqk_jtnrjcsr">家庭年人均纯收入(元)</string>
    <string name="pkh_szqk_glbt">各类补贴(元)</string>
    <string name="pkh_szqk_jhsyj">计划生育金(元)</string>
    <string name="pkh_szqk_dbj">低保金(元)</string>
    <string name="pkh_szqk_cxjmjbylbx">城乡居民基本养老保险(元)</string>
    <string name="pkh_szqk_ylbx">医疗报销(元)</string>
    <string name="pkh_szqk_deylbz">大额医疗补助(元)</string>
    <string name="pkh_szqk_stbcj">生态补偿金(元)</string>
    <string name="pkh_zfqk_zfmj">住房面积(平方米)</string>
    <string name="pkh_zfqk_fwjg">房屋结构</string>
    <string name="pkh_zfqk_jfsj">建房时间</string>
    <string name="pkh_zfqk_sfwf">是否危房</string>
    <string name="pkh_zfqk_ydfpbqqk">异地扶贫搬迁情况</string>
    <string name="pkh_sctj_tjnd">统计年度</string>
    <string name="pkh_sctj_gdmj">耕地面积(亩)</string>
    <string name="pkh_sctj_yxgggdmj">有效灌溉耕地面积(亩)</string>
    <string name="pkh_sctj_tian">田(亩)</string>
    <string name="pkh_sctj_tu">土(亩)</string>
    <string name="pkh_sctj_lscgy">林桑茶果园(亩)</string>
    <string name="pkh_sctj_tghl">退耕还林(亩)</string>
    <string name="pkh_sctj_mcd">牧草地(亩)</string>
    <string name="pkh_sctj_smmj">水面面积(亩)</string>
    <string name="pkh_sctj_syjjzw">商用经济作物(亩)</string>
    <string name="pkh_sctj_scyf">生产用房(平方米)</string>
    <string name="pkh_sctj_scsl">牲畜(头)</string>
    <string name="pkh_shtj_tjnd">统计年度</string>
    <string name="pkh_shtj_shyd">通生活用电</string>
    <string name="pkh_shtj_zyrl">主要燃料类型</string>
    <string name="pkh_shtj_ysqk">饮水情况</string>
    <string name="pkh_shtj_hqyskn">获取饮用水的主要困难</string>
    <string name="pkh_shtj_cslx">厕所类型</string>
    <string name="pkh_shtj_nyxfp">耐用消费品情况</string>
    <string name="pkh_shtj_yskn">饮水困难</string>
    <string name="pkh_shtj_ysaq">饮水安全</string>
    <string name="pkh_shtj_jlzgl">距离村主干路(公里)</string>
    <string name="pkh_shtj_rhllx">入户路类型</string>
    <string name="pkh_shtj_wscs">卫生厕所</string>
    <string name="pkh_shtj_gbds">通广播电视</string>
    <string name="pkh_cyhqk_tjnd">统计年度</string>
    <string name="pkh_cyhqk_cylx">主导产业类型</string>
    <string name="pkh_cyhqk_cyzzlx">产业组织类型</string>
    <string name="pkh_cyhqk_cyzsy">产业中收益(元)</string>
    <string name="pkh_cyhqk_cjfpzz">参加扶贫互助资金组织</string>
    <string name="pkh_cyhqk_hzzj">投入互助资金金额(元)</string>
    <string name="pkh_cyhqk_hzzz">参与农业合作组织</string>
    <string name="pkh_cyhqk_ltqy">龙头企业带动收益(元)</string>
    <string name="pkh_jtqkzp_jdlk">建档立卡</string>
    <string name="tz_none_hid">请先选择要查看的贫困户</string>
    <string name="tz_new_ndtz">新建</string>
    <string name="tz_new_ndtz_tip">请输入要新建的台账年份:</string>
    <string name="tz_jbxx">基本信息</string>
    <string name="tz_jtcy">家庭成员</string>
    <string name="tz_srmx">收入明细</string>
    <string name="tz_zcmx">支出明细</string>
    <string name="tz_zfxx">走访信息</string>
    <string name="tz_tznd">年度台账</string>
    <string name="tz_jbxx_nrjcsr">年人均纯收入(元)</string>
    <string name="tz_jbxx_nsrhj">年收入合计(元)</string>
    <string name="tz_jbxx_nzchj">年支出合计(元)</string>
    <string name="tz_jbxx_dkje">贷款合计(元)</string>
    <string name="tz_jbxx_zfjg">住房结构</string>
    <string name="tz_jbxx_zfmj">住房面积(平方米)</string>
    <string name="tz_jbxx_sfwf">是否危房</string>
    <string name="tz_jbxx_gdtian">耕地田(亩)</string>
    <string name="tz_jbxx_gdtu">耕地土(亩)</string>
    <string name="tz_jbxx_gdldm">耕地林地(亩)</string>
    <string name="tz_jbxx_gdhjm">耕地合计(亩)</string>
    <string name="tz_jbxx_sfts">是否通水</string>
    <string name="tz_jbxx_sftd">是否通电</string>
    <string name="tz_jbxx_sftl">是否通路</string>
    <string name="tz_jbxx_sftx">是否通讯</string>
    <string name="tz_jbxx_sftds">是否通电视</string>
    <string name="tz_jbxx_sftkd">是否通宽带</string>
    <string name="tz_jtcy_xm">姓名</string>
    <string name="tz_jtcy_xb">性别</string>
    <string name="tz_jtcy_yhzgx">与户主关系</string>
    <string name="tz_jtcy_jkqk">健康情况</string>
    <string name="tz_jtcy_whcd">文化程度</string>
    <string name="tz_jtcy_zy">职业</string>
    <string name="tz_jtcy_zwjn">掌握技能</string>
    <string name="tz_srmx_xmmc">项目名称</string>
    <string name="tz_srmx_xmgm">项目规模</string>
    <string name="tz_srmx_clgj">产量(公斤)</string>
    <string name="tz_srmx_nsry">年收入(元)</string>
    <string name="tz_zcmx_xmmc">项目名称</string>
    <string name="tz_zcmx_dkyt">贷款用途</string>
    <string name="tz_zcmx_zcyf">支出月份</string>
    <string name="tz_zcmx_zcjey">支出金额(元)</string>
    <string name="tz_szmx_xmmc">项目名称</string>
    <string name="tz_xmmc">请选择项目名称</string>
    <string name="tz_zfqk_xmmc">措施名称</string>
    <string name="tz_zfqk">走访情况</string>
    <string name="tz_zfqk_jhny">计划年月</string>
    <string name="tz_zfqk_jhnr">计划内容</string>
    <string name="mine_clean">清除缓存</string>
    <string name="mine_about">关于</string>
    <string name="mine_logout">注销</string>
</resources>