<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/background_title">
    <ImageView
        android:id="@+id/detail_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:padding="20dp"/>
    <TextView
        android:id="@+id/detail_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_content"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:padding="20dp"
        android:visibility="invisible"/>
    <ImageView
        android:id="@+id/detail_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="25dp"
        android:background="@color/white"
        android:contentDescription="@string/app_name"/>
    <LinearLayout
        android:id="@+id/detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/detail_photo"
        android:layout_alignTop="@id/detail_photo"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/detail_photo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/detail_text_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            android:maxLines="1"
            android:text="@string/pkh_bfdx"/>
        <TextView
            android:id="@+id/detail_text_phone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            android:maxLines="1"
            android:text="@string/pkh_jbxx_lxdh"/>
        <TextView
            android:id="@+id/detail_text_address"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            android:maxLines="1"
            android:text="@string/pkh_jbxx_jzdz"/>
    </LinearLayout>
</RelativeLayout>