<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_person_layout"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/item_person_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/text_white"
        android:contentDescription="@string/app_name"/>
    <LinearLayout
        android:id="@+id/pkh_text"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_toRightOf="@id/item_person_photo"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/item_person_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/text_main"
            android:textSize="16sp"
            android:maxLines="1"
            android:text="@string/pkh_bfdx"/>
        <TextView
            android:id="@+id/item_person_phone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/text_main"
            android:textSize="16sp"
            android:maxLines="1"
            android:text="@string/pkh_jbxx_lxdh"/>
        <TextView
            android:id="@+id/item_person_address"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textColor="@color/text_main"
            android:textSize="16sp"
            android:maxLines="2"
            android:text="@string/pkh_jbxx_jzdz"/>
    </LinearLayout>
    <RadioButton
        android:id="@+id/item_person_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:visibility="invisible"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cut_off_line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>