<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragment.TzFragment">
    <RelativeLayout
        android:id="@+id/tz_title"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/background_tab">
        <ImageView
            android:id="@+id/detail_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:contentDescription="@string/app_name"/>
        <LinearLayout
            android:id="@+id/detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/detail_photo"
            android:layout_alignTop="@id/detail_photo"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/detail_photo"
            android:orientation="vertical">
            <TextView
                android:id="@+id/detail_text_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:textColor="@color/text_white"
                android:textSize="14sp"
                android:maxLines="1"
                android:text="@string/pkh_bfdx"/>
            <TextView
                android:id="@+id/detail_text_phone"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/text_white"
                android:textSize="12sp"
                android:maxLines="1"
                android:text="@string/pkh_jbxx_lxdh"/>
            <TextView
                android:id="@+id/detail_text_address"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/text_white"
                android:textSize="12sp"
                android:maxLines="1"
                android:text="@string/pkh_jbxx_jzdz"/>
        </LinearLayout>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_tz"
        android:layout_below="@id/tz_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
