<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.deepai.evillage.controller.fragment.MineFragment">
    <RelativeLayout
        android:id="@+id/mine_detail"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/title_backgroud">
        <ImageView
            android:id="@+id/detail_photo"
            android:layout_width="101dp"
            android:layout_height="101dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="25dp"
            android:background="@color/text_white"
            android:contentDescription="@string/app_name"/>
        <LinearLayout
            android:id="@+id/detail_text"
            android:layout_width="wrap_content"
            android:layout_height="101dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/detail_photo"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/detail_text_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                android:maxLines="1"/>
            <TextView
                android:id="@+id/detail_text_phone"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                android:maxLines="1"/>
            <TextView
                android:id="@+id/detail_text_address"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                android:maxLines="1"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/mine_clean"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:text="@string/mine_clean"
        android:textSize="@dimen/mine_textsize"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/pkhxq_left_gap"
        android:layout_marginRight="@dimen/pkhxq_right_gap"
        android:background="@color/cut_off_line"/>
    <TextView
        android:id="@+id/mine_about"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:text="@string/mine_about"
        android:textSize="@dimen/mine_textsize"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/pkhxq_left_gap"
        android:layout_marginRight="@dimen/pkhxq_right_gap"
        android:background="@color/cut_off_line"/>
    <TextView
        android:id="@+id/mine_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/mine_logout"
        android:textSize="@dimen/mine_textsize"
        android:layout_margin="10dp"
        android:background="@color/tab_backgroud"
        android:layout_gravity="center"
        android:gravity="center"/>
</LinearLayout>
