<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pkhxq_top_gap"
        android:paddingBottom="@dimen/pkhxq_bottom_gap"
        android:paddingLeft="@dimen/pkhxq_left_gap"
        android:paddingRight="@dimen/pkhxq_right_gap">
        <TextView
            android:id="@+id/jtcy_xm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tz_jtcy_xm"
            android:textSize="@dimen/pkhxq_title_textsize"/>
        <EditText
            android:id="@+id/jtcy_xm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/jtcy_xm_title"
            android:layout_marginLeft="@dimen/pkhxq_text_gap"
            android:textSize="@dimen/pkhxq_content_textsize"
            android:background="@drawable/edit_text_backgroud"
            android:focusable="false"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/pkhxq_left_gap"
        android:layout_marginRight="@dimen/pkhxq_right_gap"
        android:background="@color/background_cutoff"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pkhxq_top_gap"
        android:paddingBottom="@dimen/pkhxq_bottom_gap"
        android:paddingLeft="@dimen/pkhxq_left_gap"
        android:paddingRight="@dimen/pkhxq_right_gap">
        <TextView
            android:id="@+id/jtcy_xb_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tz_jtcy_xb"
            android:textSize="@dimen/pkhxq_title_textsize"/>
        <EditText
            android:id="@+id/jtcy_xb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/jtcy_xb_title"
            android:layout_marginLeft="@dimen/pkhxq_text_gap"
            android:textSize="@dimen/pkhxq_content_textsize"
            android:background="@drawable/edit_text_backgroud"
            android:focusable="false"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/pkhxq_left_gap"
        android:layout_marginRight="@dimen/pkhxq_right_gap"
        android:background="@color/background_cutoff"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pkhxq_top_gap"
        android:paddingBottom="@dimen/pkhxq_bottom_gap"
        android:paddingLeft="@dimen/pkhxq_left_gap"
        android:paddingRight="@dimen/pkhxq_right_gap">
        <TextView
            android:id="@+id/jtcy_yhzgx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tz_jtcy_yhzgx"
            android:textSize="@dimen/pkhxq_title_textsize"/>
        <EditText
            android:id="@+id/jtcy_yhzgx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/jtcy_yhzgx_title"
            android:layout_marginLeft="@dimen/pkhxq_text_gap"
            android:textSize="@dimen/pkhxq_content_textsize"
            android:background="@drawable/edit_text_backgroud"
            android:focusable="false"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/pkhxq_left_gap"
        android:layout_marginRight="@dimen/pkhxq_right_gap"
        android:background="@color/background_cutoff"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pkhxq_top_gap"
        android:paddingBottom="@dimen/pkhxq_bottom_gap"
        android:paddingLeft="@dimen/pkhxq_left_gap"
        android:paddingRight="@dimen/pkhxq_right_gap">
        <TextView
            android:id="@+id/jtcy_jkqk_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tz_jtcy_jkqk"
            android:textSize="@dimen/pkhxq_title_textsize"/>
        <EditText
            android:id="@+id/jtcy_jkqk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/jtcy_jkqk_title"
            android:layout_marginLeft="@dimen/pkhxq_text_gap"
            android:textSize="@dimen/pkhxq_content_textsize"
            android:background="@drawable/edit_text_backgroud"
            android:focusable="false"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/pkhxq_left_gap"
        android:layout_marginRight="@dimen/pkhxq_right_gap"
        android:background="@color/background_cutoff"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pkhxq_top_gap"
        android:paddingBottom="@dimen/pkhxq_bottom_gap"
        android:paddingLeft="@dimen/pkhxq_left_gap"
        android:paddingRight="@dimen/pkhxq_right_gap">
        <TextView
            android:id="@+id/jtcy_whcd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tz_jtcy_whcd"
            android:textSize="@dimen/pkhxq_title_textsize"/>
        <EditText
            android:id="@+id/jtcy_whcd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/jtcy_whcd_title"
            android:layout_marginLeft="@dimen/pkhxq_text_gap"
            android:textSize="@dimen/pkhxq_content_textsize"
            android:background="@drawable/edit_text_backgroud"
            android:focusable="false"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/pkhxq_left_gap"
        android:layout_marginRight="@dimen/pkhxq_right_gap"
        android:background="@color/background_cutoff"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pkhxq_top_gap"
        android:paddingBottom="@dimen/pkhxq_bottom_gap"
        android:paddingLeft="@dimen/pkhxq_left_gap"
        android:paddingRight="@dimen/pkhxq_right_gap">
        <TextView
            android:id="@+id/jtcy_zy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tz_jtcy_zy"
            android:textSize="@dimen/pkhxq_title_textsize"/>
        <EditText
            android:id="@+id/jtcy_zy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/jtcy_zy_title"
            android:layout_marginLeft="@dimen/pkhxq_text_gap"
            android:textSize="@dimen/pkhxq_content_textsize"
            android:background="@drawable/edit_text_backgroud"
            android:focusable="false"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/pkhxq_left_gap"
        android:layout_marginRight="@dimen/pkhxq_right_gap"
        android:background="@color/background_cutoff"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pkhxq_top_gap"
        android:paddingBottom="@dimen/pkhxq_bottom_gap"
        android:paddingLeft="@dimen/pkhxq_left_gap"
        android:paddingRight="@dimen/pkhxq_right_gap">
        <TextView
            android:id="@+id/jtcy_zwjn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tz_jtcy_zwjn"
            android:textSize="@dimen/pkhxq_title_textsize"/>
        <EditText
            android:id="@+id/jtcy_zwjn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/jtcy_zwjn_title"
            android:layout_marginLeft="@dimen/pkhxq_text_gap"
            android:textSize="@dimen/pkhxq_content_textsize"
            android:background="@drawable/edit_text_backgroud"
            android:focusable="false"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/background_cutoff"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="2dp"
        android:background="@color/background_cutoff"/>
</LinearLayout>